[package]
name = "savis"
version = "0.0.1"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde_with = "3.3.0"
serde = { version = "1.0", features = ["derive"] }

clap = { version = "4.3", features = ["derive"] }
nannou = { package = "nannou_oop", git = "https://github.com/Nigecat/nannou-oop" }
