[package]
name = "savis"
version = "0.0.1"
edition = "2021"

[dependencies]
serde_with = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

clap = { version = "4.3", features = ["derive"] }
nannou = { package = "nannou_oop", git = "https://github.com/Nigecat/nannou-oop" }
